<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_demo_schedulers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_demo_schedulers" />

        <Button
            android:id="@+id/btn_demo_buffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_demo_buffer" />

        <Button
            android:id="@+id/btn_demo_debounce"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_demo_debounce"
            />

        <Button
            android:id="@+id/btn_demo_double_binding_textview"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_demo_double_binding_textview"
            />

        <Button
            android:id="@+id/btn_demo_polling"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_demo_polling" />

    </LinearLayout>
</ScrollView>
